[package]
name = "xlsb-writer"
version = "0.1.0-a"
edition = "2021"
description = "Fast zero-copy XLSB (Excel Binary) writer for Arrow RecordBatches"
license = "MIT"
repository = "https://github.com/kotucha/xlsb-writer"

[lib]
name = "xlsb_writer"
crate-type = ["lib", "cdylib"]   # lib for Rust consumers, cdylib for DuckDB extension

[dependencies]
arrow          = { version = "53", default-features = false, features = ["ffi"] }
zip            = { version = "2", default-features = false, features = ["deflate"] }
indexmap       = "2"    # insertion-order HashMap for SST (preserves string order)
pyo3           = { version = "0.22", features = ["extension-module"], optional = true }

[dev-dependencies]
arrow          = { version = "53", features = ["ipc"] }

[features]
default = []
duckdb  = []   # enable DuckDB extension glue (future)
python  = ["dep:pyo3", "arrow/pyarrow"]
